<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".PlayersActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            app:tint="#FFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/points_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1520"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textColor="#FFF"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/points_icon"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/points_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/points_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/profile_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="32"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textColor="#FFF"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/coin_icon"
            app:layout_constraintTop_toBottomOf="@id/points_value"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/coin_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/coin_icon"
            app:layout_constraintEnd_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/points_icon" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:background="#CE1212">

        <TextView
            android:id="@+id/tv_plantel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/plantel"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFF"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_players"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:translationZ="1dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_player_image_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="fitXY"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="-30dp"
                android:translationZ="2dp"
                android:background="@drawable/round_border">

                <TextView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:text="No."
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#1B1E2F"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="4dp"
                    android:gravity="center|top"/>
                <TextView
                    android:id="@+id/tv_player_position"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:gravity="center"
                    android:textColor="#CE1212"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="5dp"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:text="13"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:translationZ="1dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="2dp"
                    app:cardCornerRadius="21dp">

                    <TextView
                        android:id="@+id/tv_player_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/roboto"
                        android:text="Adolfo Alejandro"
                        android:textColor="#1B1E2F"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_player_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="90dp"
                        android:fontFamily="@font/roboto"
                        android:text="MUÑOZ CERVANTES"
                        android:textColor="#CE1212"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="74dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="130dp"
                        android:layout_marginEnd="12dp"
                        android:background="#48CFCFCF">

                        <ImageView
                            android:id="@+id/iv_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="39dp"
                            android:src="@drawable/wight_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/tv_peso"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_peso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/peso"
                            android:textColor="#1B1E2F"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toStartOf="@id/line"
                            app:layout_constraintStart_toEndOf="@id/iv_weight"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_player_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto"
                            android:text="57"
                            android:textColor="#1B1E2F"
                            android:textSize="20sp"
                            android:textStyle="bold"

                            app:layout_constraintEnd_toStartOf="@id/line"
                            app:layout_constraintStart_toEndOf="@id/iv_weight"
                            app:layout_constraintTop_toBottomOf="@id/tv_peso" />

                        <ImageView
                            android:id="@+id/line"
                            android:layout_width="20dp"
                            android:layout_height="36dp"
                            android:src="@drawable/line"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/guideline"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/iv_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/height_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/guideline"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_altura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/altura"
                            android:textColor="#1B1E2F"
                            android:textSize="12sp"
                            app:layout_constraintStart_toEndOf="@id/iv_height"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_player_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="20dp"
                            android:fontFamily="@font/roboto"
                            android:text="1,66"
                            android:textColor="#1B1E2F"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@id/iv_height"
                            app:layout_constraintTop_toBottomOf="@id/tv_altura" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.5" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:translationZ="10dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp">
                        <ImageView
                            android:id="@+id/iv_nacional"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/nacionalidad"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                        <TextView
                            android:id="@+id/tv_nacional"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nacionalidad"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/roboto"
                            android:textColor="#1B1E2F"
                            app:layout_constraintStart_toEndOf="@id/iv_nacional"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                        <TextView
                            android:id="@+id/tv_date_of_birth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ecuatoriano"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/roboto"
                            android:textColor="#1B1E2F"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:id="@+id/iv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_nacional"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_de_nacimiento"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#1B1E2F"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toEndOf="@id/iv_date"
                        app:layout_constraintTop_toBottomOf="@id/tv_nacional"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12/12/1997"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="#1B1E2F"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_date_of_birth"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>